HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldUnknown/Expected.uv
//! Expected diagnostic metadata for the RecordFieldUnknown rejected-source specimen.

expectedDiagnostic("E-TYP-1904", "rule.16.RecordFieldUnknownNotVisibleFamily")
